v3/background.md
# Background

The principle idea that drove the creation and development of telehash
is the belief that any application instance should be able to easily and
securely talk to any other application instance or device, whether they are two
instances of the same application, or completely different
applications. They should be able to do so directly, and in any
environment, from servers to mobile devices down to embedded systems
and sensors.

By enabling this freedom for developers as a foundation for their
applications, telehash enables the same freedom for the people using
them - that the user can connect, share, and communicate more easily
and with control of their privacy.

The challenges and complexity today in connecting applications via
existing technologies such as APIs, OAuth, and REST is only increasing,
often forcing fundamentally insecure, centralized, and closed/gated
communication platforms.  By adopting telehash in any application, that
application immediately has a powerful set of open tools for not only
its own needs, but can then also enable connectivity to and from
applications created by others easily. These tools include the ability
to have friends, sharing, feeds, tagging, search, notifications,
discovery, and other social patterns.

Telehash has a fundamental requirement to remain simple and
light-weight in order to support applications running on networked
devices and sensors. The design goals also include not forcing any
particular architectural design such as client-server,
centralized/federated/distributed, polling/push, REST, streaming,
publish-subscribe, or message passing... any can be used, as telehash
simply facilitates secure reliable connectivity between any two or more
applications in any networking environment.

<a name="name" />
# The Name

The name is a simple combination of **tele** from telegraph, and **hash** from hashtable, and pronounced as the parts of those words normally would be.

It is usually used in all lower-case to re-affirm the long term vision of it being used as a modern version of the word "telephone", both as a generic private communication system that is federated and compatible, and the act of two application instances communicating privately and directly.

# History

The name and first version of the protocol was established in [2009](https://github.com/quartzjer/Telehash) by [Jeremie Miller](http://en.wikipedia.org/wiki/Jeremie_Miller) and was a research project until [2013 (v2)](https://github.com/telehash/telehash.org/tree/master/v2) when it was significantly updated with a privacy focus.

In [2014 (v3)](https://github.com/telehash/telehash.org/tree/master/v3) the protocol was refactored into [e3x](https://github.com/telehash/telehash.org/tree/master/v3/e3x), [mesh](https://github.com/telehash/telehash.org/blob/master/v3/mesh.md), and [blockname](https://github.com/telehash/blockname), to focus on being a set of easy to use end-to-end encrypted mesh communication tools.

See this [blog post](http://quartzjer.tumblr.com/post/71784515314/telehash-history) for some more history on its development.